[package]
name = "onstat3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = [] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1"
fnv = "1"
int-enum = "0.5"
maud = "0.25"
png = "0.17"