[package]
name = "onstat3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1"
maud = "0.25"
png = "0.17"
futures = "*"
env_logger = "0.11"
surge-ping = "0.8"
argh = "0.1"
